--- a/docs/css/solicitacao.css
+++ b/docs/css/solicitacao.css
@@ -6,101 +6,76 @@
 .banner {
     background: url(../assets/images/formulario2.jpg);
     width: 100vw;
-    height: 100dvh;
+    height: 100vh; 
     background-size: cover;
     display: flex;
     flex-direction: column;
-    align-items: center;   
-
+    align-items: center;
 }
 
 .container-solicitacao {
-    /* display: flex; */
-    height: 70vh;
     width: 100vw;
-    justify-content:center;
-    align-items:center;
+    display: flex;
+    justify-content: center;
+    padding-top: 65px;
 }
 
-.form {
-    width: 70%;
-    height: 531px;
+form {
+    width: 1580px;
+    max-width: 500px; 
+    height: auto; 
     background-color: #0b142f;
     border-radius: 10px;
     flex-direction: column;
-    padding: 20px 50px 20px 50px;   
-    display: flex 100%;
+    padding: 20px 50px; 
+    display: flex;
 }
 
 #form-continuar-solicitacao {
-    height: 405px;
-    margin: 100px;
-    
+    margin: 20px; 
 }
 
-.info-formes-solicitacao label, #title-form {
-    color: #FFF;
-    
+.info-formes-solicitacao label,
+#title-form {
+    color: #fff;
 }
 
-#form-finalizar-solicitacao {
-    padding-top: 28px;
-    display: none;
-}
-
-#title-form { 
+#title-form {
     text-align: center;
     font-size: 25px;
     font-weight: bold;
     padding-bottom: 20px;
-    color: #FFF;
 }
 
 .info-formes-solicitacao input {
-    width: 322px;
+    width: 100%; 
     height: 50px;
     border-radius: 5px;
     border: 1px solid #bbb;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
     padding: 0 10px;
-    margin: 15px;
-    margin-left: 0  ;
-    
-}
-
-#form-finalizar-solicitacao {
-    padding-top: 28px;
-    display: none;
+    margin: 10px 0; 
 }
 
 button {
     width: 100%;
     height: 50px;
-    margin-top: 90px!important;
-    display: flex;
+    margin-top: 20px; 
     align-items: center;
     justify-content: center;
 }
 
-#button-continuar {
+#button-continuar,
+#button-voltar,
+#button-enviar {
     background-color: #e4321e;
-    color: #FFF;
-    font-weight:bold;
-    border:none;
-    border-radius:5px;
-    font-size:20px;
-    margin-top: 27px;
-}
-
-.button-continuar {
-    width: 322px;
-    height: 50px;
-    font-size: large;
-}
-
-button:hover {
-    background-color: #e4321e;
+    color: #fff;
+    font-weight: bold;
+    border: none;
     border-radius: 5px;
+    font-size: 20px;
+    margin-top: 20px;
+    cursor: pointer; 
 }
 
 .button-container {
@@ -108,26 +83,16 @@ button:hover {
 }
 
 #button-voltar {
-    width: 15%;
-    background-color: #e4321e;
-    color: #FFF;
-    font-weight:bold;
-    border:none;
-    border-radius:5px;
-    font-size:20px;
-    margin-top: 30px;
+    width: 30%; 
     margin-right: 5px;
-}   
+}
 
 #button-enviar {
-    width: 85%;
-    background-color: #e4321e;
-    color: #FFF;
-    font-weight:bold;
-    border:none;
-    border-radius:5px;
-    font-size:20px;
-    margin-top: 30px;   
+    width: 70%; 
     margin-left: 5px;
 }
 
+button:hover {
+    background-color: #c4210e; 
+    border-radius: 5px;
+}
