--- a/docs/css/user-recovery.css
+++ b/docs/css/user-recovery.css
@@ -22,6 +22,7 @@
     height: 531px;
     background-color: #FFF;
     display: flex;
+    text-align: center;
     border-radius: 10px;
     flex-direction: column;
     justify-content: space-between;
@@ -40,7 +41,7 @@
 }
 
 
-.info-boxes input {
+.info-boxes-suporte input {
     width: 322px;
     height: 59px;
     border-radius: 5px;
@@ -49,6 +50,10 @@
     padding: 0 10px;
     margin: 15px;
     margin-left: 0;
+}
+
+.info-boxes-suporte {
+    text-align: left;
 }
 
 
@@ -60,13 +65,14 @@
     height: 150px;
 }
 
+
 .img-recovery img {
-    width: 135px;
-    height: 135px;
+    width: 85px;
+    height: 85px;
 }
 
 
-#btn-recuperar {
+button {
     width: 100%;
     height: 50px;
     display: flex;
@@ -103,3 +109,5 @@ button:hover {
 .invalid {
     border: 2px solid rgb(255, 0, 0);
 }
+
+
