--- a/docs/css/suporte.css
+++ b/docs/css/suporte.css
@@ -159,6 +159,7 @@ button:hover {
 }
 @media only screen and (max-width: 768px) {
     .banner {
+        background: none;
         background-size: cover;
         display: flex;
         flex-direction: column;
@@ -206,8 +207,8 @@ button:hover {
     }
     
 
-    .info-boxes-suporte label, #title-box {
-        color: #FFF;
+    .info-boxes-suporte label {
+        color: black;
         margin-right: 20px;
     
         }
