--- a/docs/css/user-login.css
+++ b/docs/css/user-login.css
@@ -110,6 +110,7 @@
 
 @media only screen and (max-width: 768px) {
   .banner {
+    background: none;
     background-size: 150%;
     background-repeat: no-repeat;
     background-size: cover;   
