--- a/docs/css/pgto.css
+++ b/docs/css/pgto.css
@@ -1,4 +1,10 @@
+@font-face {
+    font-family: "Montserrat";
+    src: url(../assets/font/Montserrat/static/Montserrat-Regular.ttf);
+}
+
 * {
+    font-family: Montserrat, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -26,7 +32,7 @@ Slider opção pagamento
 
 .toggle-switch {
     display: inline-block;
-    background: #ccc;
+    background: #0b142f;
     border-radius: 16px;
     width: 58px;
     height: 32px;
@@ -59,7 +65,7 @@ Slider opção pagamento
 }
 
 .toggle-checkbox:checked+.toggle-switch {
-    background: #56c080;
+    background: #e4321e;
 }
 
 .toggle-checkbox:checked+.toggle-switch:before {
@@ -103,6 +109,12 @@ Slider opção pagamento
     position: absolute;
     left: 30%;
     top: -90px;
+
+}
+
+.qr-pix img{
+    height: 160px;
+    width: 160px;
 }
 
 .blur {
@@ -117,7 +129,7 @@ Copia/cola Pix
 
 .pix-copia-cola {
     width: 100%;
-    height: 100%;
+    height: 80%;
     display: flex;
     position: absolute;
     top: 20%;
@@ -126,9 +138,8 @@ Copia/cola Pix
 }
 
 .top-span {
-    margin: 0 0 20px 0;
+    margin: 0 10px 20px 10px;
     text-align: center;
-
 }
 
 #copia-cola {
