--- a/docs/css/pgto.css
+++ b/docs/css/pgto.css
@@ -103,6 +103,7 @@ Slider opção pagamento
     position: relative;
     top: 10%;
     left: 10%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .qr-pix {
@@ -118,8 +119,7 @@ Slider opção pagamento
 }
 
 .blur {
-    width: 100%;
-    height: 100%;
+
     filter: blur(4px);
 }
 
@@ -165,4 +165,8 @@ Copia/cola Pix
 
 .btn-copia img {
     margin-right: 5px;
+}
+
+.hidden {
+    display: none;
 }
