--- a/docs/css/pgto.css
+++ b/docs/css/pgto.css
@@ -8,6 +8,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+}
+
+textarea {
+    resize: none;
+}
+
+textarea:focus {
+    border: 2px solid #E53420 !important;
+    outline: transparent !important;
 }
 
 body {
@@ -113,13 +123,12 @@ Slider opção pagamento
 
 }
 
-.qr-pix img{
+.qr-pix img {
     height: 160px;
     width: 160px;
 }
 
 .blur {
-
     filter: blur(4px);
 }
 
@@ -169,4 +178,37 @@ Copia/cola Pix
 
 .hidden {
     display: none;
+}
+
+@media (max-width: 1080px) {
+    .background-checkout {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .checkout-box {
+        width: 80%;
+        height: 65%;
+        top: 0 !important;
+        left: 0 !important;
+    }
+
+
+    .qr-pix {
+        position: absolute;
+        left: 26.8%;
+        top: -70px;
+
+    }
+
+    #span-bottom {
+        text-align: center;
+    }
+
+    #btn-copiar {
+        width: 40%;
+        margin-top: 30px;
+    }
 }
