--- a/docs/css/pgto.css
+++ b/docs/css/pgto.css
@@ -103,6 +103,7 @@ Slider opção pagamento
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .checkout-box {
@@ -110,26 +111,20 @@ Slider opção pagamento
     width: 40%;
     height: 70%;
     display: flex;
-    position: relative;
-    top: 10%;
-    left: 10%;
+    padding-top: 80px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    justify-content: center;
 }
 
 .qr-pix {
     position: absolute;
-    left: 30%;
-    top: -90px;
-
+    top: 30px;
+    border: 1px solid #000;
 }
 
 .qr-pix img {
-    height: 160px;
-    width: 160px;
-}
-
-.blur {
-    filter: blur(4px);
+    height: 150px;
+    width: 150px;
 }
 
 /*---------------
@@ -140,8 +135,6 @@ Copia/cola Pix
     width: 100%;
     height: 80%;
     display: flex;
-    position: absolute;
-    top: 20%;
     align-items: center;
     flex-direction: column;
 }
@@ -149,6 +142,7 @@ Copia/cola Pix
 .top-span {
     margin: 0 10px 20px 10px;
     text-align: center;
+    font-weight: 500;
 }
 
 #copia-cola {
@@ -161,15 +155,16 @@ Copia/cola Pix
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
-    width: 33%;
-    height: 7%;
+    width: 40%;
+    height: 20px;
     background-color: #e4321e;
     color: white;
     border-radius: 5px;
     border: 0px;
-    margin-bottom: 10px;
+    margin: 10px 0 20px 0;
     cursor: pointer;
+    padding: 20px;
+    font-weight: 700;
 }
 
 .btn-copia img {
@@ -180,7 +175,12 @@ Copia/cola Pix
     display: none;
 }
 
-@media (max-width: 1080px) {
+#span-bottom {
+    font-weight: 700;
+}
+
+@media (max-width: 600px) {
+
     .background-checkout {
         flex-direction: column;
         align-items: center;
@@ -191,15 +191,13 @@ Copia/cola Pix
     .checkout-box {
         width: 80%;
         height: 65%;
-        top: 0 !important;
-        left: 0 !important;
+        padding-top: 90px;
     }
 
 
     .qr-pix {
         position: absolute;
-        left: 26.8%;
-        top: -70px;
+        top: 75px;
 
     }
 
