--- a/docs/css/veiculo.css
+++ b/docs/css/veiculo.css
@@ -12,17 +12,68 @@
     background: url("../assets/images/bg-home-sm.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: bottom;    
     border-top: 1px solid;
     overflow: hidden;
 }
-
-.form {
-
-    height: 400px;
-    width: 400px;
-    background-color: aqua;
+.content{
+    width: 100%;
+    height: 86.3vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color:rgba(0,0,0,.4); 
 }
+
+.form-cadastro {
+    margin-top: 100px;
+    height: 680px;
+    width: 430px;
+    background-color: #fff;
+    border: 1px solid #bbb;
+    border-radius: 10px;
+    align-items: center;
+}
+
+.info-cadastro input {
+    width: 85%; 
+    height: 50px;
+    border-radius: 5px;
+    border: 1px solid #bbb;
+    background-color: #f5f5f5;
+    padding: 0 10px 0 10px;
+    margin: 10px 10px 10px 10px; 
+}
+
+.info-cadastro {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.info-cadastro label,
+#title-form {
+    color: #0f0000;
+    padding-left: 15px;
+}
+
+#title-form {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+
+#button-cadastrar {
+    display: flex;
+    width: 322px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 5px;
+    justify-content: center;
+    margin: 0 auto 0 auto;
+    padding-top: 10px;
+    background-color: #e4321e;
+    color: #FFF; 
+}
+
