--- a/docs/css/veiculo.css
+++ b/docs/css/veiculo.css
@@ -9,7 +9,7 @@
 
 .banner {
     width: 100%;
-    background: url("../assets/images/bg-home-sm.jpg");
+    background: url("./assets/images/bg-home-sm.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;    
@@ -17,15 +17,18 @@
     overflow: hidden;
 }
 .content{
-    width: 100%;
+    background: url(../assets/images/caminhao\ topzera.jpg);
+    background-position: center;
+    background-size: contain;
+    width: 100vw;
     height: 86.3vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color:rgba(0,0,0,.4); 
+    background-color:rgba(0,0,0,.0); 
 }
 
-.form-cadastro {
+.form-cadastro {    
     margin-top: 100px;
     height: 680px;
     width: 430px;
@@ -36,7 +39,7 @@
 }
 
 .info-cadastro input {
-    width: 85%; 
+    width: 95%; 
     height: 50px;
     border-radius: 5px;
     border: 1px solid #bbb;
@@ -55,15 +58,19 @@
 #title-form {
     color: #0f0000;
     padding-left: 15px;
-}
+}   
 
 #title-form {
+    margin-top: 20px;
     text-align: center;
     font-size: 25px;
     font-weight: bold;
     padding-bottom: 20px;
 }
 
+.botao{
+margin-top: 20px;
+}
 #button-cadastrar {
     display: flex;
     width: 322px;
