--- a/docs/css/pagamento.css
+++ b/docs/css/pagamento.css
@@ -130,7 +130,6 @@ textarea:focus {
 
 
 .pix-copia-cola {
-
     width: 100%;
     height: 90%;
     display: flex;
@@ -618,19 +617,13 @@ Credit Card
         width: 50%;
     }
 
-    #btn-continua {
-        display: none;
-    }
-
     .checkout-credit {
         width: 50%;
-
+        border-left: 1px solid rgba(0, 0, 0, 0.25);
+        box-shadow: inset 2px 0 0 rgba(0, 0, 0, 0.5);
+        
         align-items: center;
         flex-direction: column;
-    }
-
-    .btn-bottom {
-        display: none;
     }
 
     .form {
@@ -677,6 +670,29 @@ Credit Card
 
     .opcao-pgto {
         display: none;
+    }
+
+    .bottom-menu {
+        margin-bottom: 20px;
+        margin-top: 10px;
+    }
+
+    .pix-copia-cola {
+        height: 100%;
+
+    }
+
+    #btn-copiar {
+        margin: 0px !important;
+        margin-top: 20px;
+    }
+
+    .top-span {
+        margin: 0;
+    }
+
+    .input-cart-number {
+        width: 78px !important;
     }
 }
 
