--- a/docs/css/perfiltest.css
+++ b/docs/css/perfiltest.css
@@ -86,7 +86,11 @@
     justify-content: center;
     align-content: center;
     font-size: large;
+}
+
+.btn-logout:hover {
     cursor: pointer;
+    color: var(--color-hover-perfil);
 }
 
 
@@ -170,6 +174,7 @@
 /* --- DADOS DO USÚARIO --- */
 
 .container-dados {
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
     width: 100vw;
@@ -191,6 +196,7 @@
 }
 
 .sections-perfil {
+    display: flex;
     width: 100%;
     height: 30px;
     margin-top: 15px;
@@ -200,6 +206,94 @@
 .sections-perfil span {
     padding-right: 30px;
     font-size: 17px;
+}
+
+.sections-perfil span:hover {
+    cursor: pointer;
+    color: var(--color-hover-perfil);
+}
+
+.active-perfil {
+    color: var(--color-active-perfil);
+    background-color: var(--color-background-perfil3);
+}
+
+#sections-perfil-informacoes span::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 1;
+    left: 1;
+    width: 106px;
+    height: 5px;
+    border-top: 2px solid #FFF;
+    background-color: var(--color-hover-perfil);
+    transform: scaleX(0);
+    transform-origin: bottom left;
+    transition: transform 0.3s ease-in-out;
+}
+
+#sections-perfil-historico span::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 1;
+    left: 1;
+    width: 75px;
+    height: 5px;
+    border-top: 2px solid #FFF;
+    background-color: var(--color-hover-perfil);
+    transform: scaleX(0);
+    transform-origin: bottom left;
+    transition: transform 0.3s ease-in-out;
+}
+
+#sections-perfil-veiculos span::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 1;
+    left: 1;
+    width: 70px;
+    height: 5px;
+    border-top: 2px solid #FFF;
+    background-color: var(--color-hover-perfil);
+    transform: scaleX(0);
+    transform-origin: bottom left;
+    transition: transform 0.3s ease-in-out;
+}
+
+#sections-perfil-configuracoes span::after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 1;
+    left: 1;
+    width: 122px;
+    height: 5px;
+    border-top: 2px solid #FFF;
+    background-color: var(--color-hover-perfil);
+    transform: scaleX(0);
+    transform-origin: bottom left;
+    transition: transform 0.3s ease-in-out;
+}
+
+#sections-perfil-informacoes span:hover::after,
+#sections-perfil-historico span:hover::after,
+#sections-perfil-veiculos span:hover::after,
+#sections-perfil-configuracoes span:hover::after,
+#sections-perfil-informacoes span.active::after,
+#sections-perfil-historico span.active::after,
+#sections-perfil-veiculos span.active::after,
+#sections-perfil-configuracoes span.active::after {
+    transform: scaleX(1);
+}
+
+#sections-perfil-informacoes span.active::after,
+#sections-perfil-historico span.active::after,
+#sections-perfil-veiculos span.active::after,
+#sections-perfil-configuracoes span.active::after {
+    height: 0;
 }
 
 .container-informacoes {
@@ -224,8 +318,8 @@
 }
 
 .photo-veiculo-perfil {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 130px;
     display: flex;
     padding-bottom: 20px;
 }
@@ -233,45 +327,5 @@
 .photo-veiculo-perfil img {
     width: 100%;
     height: 100%;
-    margin-right: 15px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
-.box-imagem-veiculo {
-    position: relative;
-    width: 50%;
-    display: inline-block;
-}
-
-.box-imagem-veiculo img {
-    display: block;
-    width: 100%;
-    height: auto;
-}
-
-.sobreposicao-imagem {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: #008CBA;
-}
-
-.box-imagem-veiculo:hover .sobreposicao-imagem {
-    opacity: 1;
-}
-
-.text-sobreposicao-imagem {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
+    padding-right: 20px;
 }
