--- a/docs/css/perfiltest.css
+++ b/docs/css/perfiltest.css
@@ -68,14 +68,14 @@
     margin-bottom: 25px;
 }
 
-#icons-conquistas {
+#icons-conquistas-usuario {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 4px;
 }
 
-#icons-conquistas img {
+#icons-conquistas-usuario img {
     width: 100px;
     height: 100px;
 }
@@ -181,11 +181,15 @@
     height: 100%;
     background-color: var(--color-background-perfil3);
     color: var(--color-text-perfil2);
-    padding: 4% 2%;
+    padding: 4% 2% 0 2%;
     box-shadow: 0px 0px 30px 3px rgba(0, 0, 0, 0.38) inset;
     -webkit-box-shadow: 0px 0px 30px 3px rgba(0, 0, 0, 0.38) inset;
     -moz-box-shadow: 0px 0px 30px 3px rgba(0, 0, 0, 0.38) inset;
 }
+
+
+
+/* --- DADOS DO CONTAINER INFORMAÇÕES --- */
 
 .nome-usuario-perfil {
     width: 100%;
@@ -218,64 +222,37 @@
     background-color: var(--color-background-perfil3);
 }
 
-#sections-perfil-informacoes span::after {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: 1;
-    left: 1;
-    width: 106px;
-    height: 5px;
-    border-top: 2px solid #FFF;
-    background-color: var(--color-hover-perfil);
-    transform: scaleX(0);
-    transform-origin: bottom left;
-    transition: transform 0.3s ease-in-out;
-}
-
-#sections-perfil-historico span::after {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: 1;
-    left: 1;
-    width: 75px;
-    height: 5px;
-    border-top: 2px solid #FFF;
-    background-color: var(--color-hover-perfil);
-    transform: scaleX(0);
-    transform-origin: bottom left;
-    transition: transform 0.3s ease-in-out;
-}
-
-#sections-perfil-veiculos span::after {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: 1;
-    left: 1;
-    width: 70px;
-    height: 5px;
-    border-top: 2px solid #FFF;
-    background-color: var(--color-hover-perfil);
-    transform: scaleX(0);
-    transform-origin: bottom left;
-    transition: transform 0.3s ease-in-out;
-}
-
+#sections-perfil-informacoes span::after,
+#sections-perfil-historico span::after,
+#sections-perfil-veiculos span::after,
 #sections-perfil-configuracoes span::after {
     content: '';
     display: block;
     position: absolute;
     bottom: 1;
     left: 1;
-    width: 122px;
     height: 5px;
     border-top: 2px solid #FFF;
     background-color: var(--color-hover-perfil);
     transform: scaleX(0);
     transform-origin: bottom left;
     transition: transform 0.3s ease-in-out;
+}
+
+#sections-perfil-informacoes span::after {
+    width: 106px;
+}
+
+#sections-perfil-historico span::after {
+    width: 75px;
+}
+
+#sections-perfil-veiculos span::after {
+    width: 70px;
+}
+
+#sections-perfil-configuracoes span::after {
+    width: 122px;
 }
 
 #sections-perfil-informacoes span:hover::after,
@@ -328,4 +305,54 @@
     width: 100%;
     height: 100%;
     padding-right: 20px;
+}
+
+.todas-conquistas-perfil {
+    width: auto;
+    height: auto;
+    display: flex;
+    margin-bottom: 40px;
+}
+
+.todas-conquistas-perfil img {
+    width: 100px;
+    height: 100px;
+    margin-right: 20px;
+}
+
+
+
+/* --- DADOS DO CONTAINER HISTÓRICO --- */
+
+.item {
+    width: 100%;
+    margin: 25px 0 25px 0;
+    border-left: #e4321e;
+    background-color: rgb(245, 243, 243);
+    border-style: solid;
+    padding: 5px 0;
+}
+
+.info-dados-perfil {
+    display: flex;
+    width: 100%;
+    height: auto;
+}
+
+.info-dados-perfil p {
+    display: flex;
+    width: auto;
+    height: auto;
+    font-weight: bold;
+    padding: 0 5px 0 15px;
+}
+
+.modelo,
+.placa,
+.data,
+.origem,
+.destino,
+.valor {
+    display: block;
+    width: 100%;
 }
