--- a/docs/css/header.css
+++ b/docs/css/header.css
@@ -214,6 +214,7 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-top: 5px;
 }
 
 .footer-icons {
