--- a/docs/css/pagamento.css
+++ b/docs/css/pagamento.css
@@ -206,7 +206,7 @@ textarea:focus {
     background: #E53420;
     color: white;
     text-decoration: none;
-    margin: 20px 0;
+
     padding: 15px 15px;
     border-radius: 5px;
     position: relative;
@@ -595,13 +595,28 @@ Credit Card
         flex-direction: column;
     }
 
+    #limpa_campos {
+        top: 0;
+        margin-top: 0;
+    }
+
     .btn-bottom {
         height: 15%;
         display: flex;
         align-items: center;
     }
 
+    #btn-submit {
+        margin-top: 0;
+    }
+
+
+
 @media (min-width: 770px) {
+
+    #btn-submit {
+        margin-top: 90px !important;
+    }
 
     .btn-copia {
         width: 30%;
@@ -621,7 +636,7 @@ Credit Card
         width: 50%;
         border-left: 1px solid rgba(0, 0, 0, 0.25);
         box-shadow: inset 2px 0 0 rgba(0, 0, 0, 0.5);
-        
+        justify-content: center;
         align-items: center;
         flex-direction: column;
     }
@@ -679,7 +694,7 @@ Credit Card
 
     .pix-copia-cola {
         height: 100%;
-
+        justify-content: space-evenly;
     }
 
     #btn-copiar {
@@ -694,6 +709,14 @@ Credit Card
     .input-cart-number {
         width: 78px !important;
     }
+
+    .card_number_form {
+        display: flex;
+        justify-content: center;
+    }
+
+
 }
+
 
 
