arrumando responsividade da página veiculo

--- a/docs/css/veiculo.css
+++ b/docs/css/veiculo.css
@@ -17,19 +17,20 @@
     overflow: hidden;
 }
 .content{
-    background: url(../assets/images/caminhao\ topzera.jpg);
+    background: url(../assets/images/pexels-daniil-ustinov-8360517.jpg);
     background-position: center;
-    background-size: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100vw;
-    height: 86.3vh;
+    height: 86.31vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color:rgba(0,0,0,.0); 
+    background-color: rgba(0, 0, 0, .5);
 }
 
 .form-cadastro {    
-    margin-top: 100px;
+    margin-top: 90px;
     height: 680px;
     width: 430px;
     background-color: #fff;
@@ -80,7 +81,49 @@ margin-top: 20px;
     justify-content: center;
     margin: 0 auto 0 auto;
     padding-top: 10px;
-    background-color: #e4321e;
+    background-color: #e4321e;  
     color: #FFF; 
 }
 
+@media only screen and (max-width: 768px) { 
+
+    .content{
+        background: none;  
+        width: 100%;
+        height: 100%; 
+    }
+
+    .form-cadastro {     
+        margin-top: 60px;
+        height: 650px;
+        width: 380px;
+        border-radius: 10px;
+        align-items: center;
+        border: none;
+    }
+    
+
+    .info-cadastro input {
+        width: 90%; 
+        height: 45px;
+        border-radius: 5px;
+        margin: 10px 10px 10px 10px; 
+    }
+    #button-cadastrar {
+        display: flex;
+        width: 320px;
+        height: 50px;
+        font-size: 20px;
+        border-radius: 5px;
+        justify-content: center;
+        background-color: #e4321e;  
+        color: #FFF; 
+    }
+
+    .info-cadastro label,
+#title-form {
+    color: #0f0000;
+    padding-left: 15px;
+}   
+
+}
