--- a/docs/css/perfiltest.css
+++ b/docs/css/perfiltest.css
@@ -19,7 +19,7 @@
 
 .content {
     display: flex;
-    height: 100vh;
+    height: 86vh;
     overflow: hidden;
 }
 
@@ -62,6 +62,7 @@
     height: 450px;
     align-items: center;
     width: 250px;
+    text-align: center;
 }
 
 #conquista-txt-usuario {
@@ -70,9 +71,10 @@
 
 #icons-conquistas-usuario {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     gap: 4px;
+    height: 300px;
+    width: 250px;
 }
 
 #icons-conquistas-usuario img {
@@ -178,7 +180,7 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100%;
+    height: auto;
     background-color: var(--color-background-perfil3);
     color: var(--color-text-perfil2);
     padding: 4% 2% 0 2%;
@@ -193,14 +195,10 @@
 
 .nome-usuario-perfil {
     width: 100%;
-    height: 50px;
+    height: auto;
     font-size: 30px;
     padding-bottom: 15px;
     border-bottom: 2px solid #000;
-}
-
-.sections-perfil-informacoes-mobile {
-    display: none;
 }
 
 .sections-perfil {
@@ -211,8 +209,15 @@
     font-size: 18px;
 }
 
+.sections-perfil-desketop {
+    display: flex;
+}
+
+.sections-perfil-mobile {
+    display: none;
+}
+
 .sections-perfil span {
-    padding-right: 30px;
     font-size: 17px;
 }
 
@@ -224,15 +229,17 @@
 .active-perfil {
     color: var(--color-active-perfil);
     background-color: var(--color-background-perfil3);
+    border-bottom: 3px solid #e4321e;
+    padding-bottom: 6px;
 }
 
-/* #sections-perfil-informacoes span::after,
+#sections-perfil-informacoes span::after,
 #sections-perfil-historico span::after,
 #sections-perfil-veiculos span::after,
 #sections-perfil-configuracoes span::after {
     content: '';
     display: block;
-    position: absolute;
+    position: relative;
     bottom: 1;
     left: 1;
     height: 5px;
@@ -241,6 +248,7 @@
     transform: scaleX(0);
     transform-origin: bottom left;
     transition: transform 0.3s ease-in-out;
+    margin-right: 30px;
 }
 
 #sections-perfil-informacoes span::after {
@@ -275,7 +283,7 @@
 #sections-perfil-veiculos span.active::after,
 #sections-perfil-configuracoes span.active::after {
     height: 0;
-} */
+}
 
 .container-informacoes {
     display: block;
@@ -398,7 +406,7 @@
 
 /* --- PERFIL MOBILE --- */
 
-@media (max-width: 550px) {
+@media (max-width: 1125px) {
 
     .content {
         display: flex;
@@ -476,18 +484,23 @@
         display: flex;
         justify-content: center;
         width: 100%;
-        height: 50px;
+        height: auto;
         font-size: 15px;
         padding-bottom: 15px;
         border-bottom: 2px solid #000;
     }
 
     .sections-perfil span {
-        padding-right: 0;
-        font-size: 0;
+        padding-right: 5px;
+        font-size: 13px;
     }
 
-    .sections-perfil-informacoes-mobile {
-        display: flex;
+    .sections-perfil-desketop {
+        display: none;
     }
+    
+    .sections-perfil-mobile {
+        display: none;
+    }
+    
 }
