--- a/docs/css/solicitacao.css
+++ b/docs/css/solicitacao.css
@@ -5,7 +5,6 @@
 
 * {
     font-family: "Montserrat", sans-serif;
-
 }
 
 .banner {
@@ -17,6 +16,15 @@
     flex-direction: column;
     align-items: center;
 
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, .4);
+    overflow: hidden;
 }
 
 .container-solicitacao {
