--- a/docs/css/user-recovery.css
+++ b/docs/css/user-recovery.css
@@ -3,7 +3,9 @@
     src: url(../assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
 
-
+* {
+    font-family: "Montserrat", sans-serif;
+}
 
 
 .banner {
@@ -65,6 +67,14 @@
     height: 150px;
 }
 
+#content {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, .4);
+    overflow: hidden;
+}
 
 .img-recovery img {
     width: 85px;
