--- a/docs/css/user-signup.css
+++ b/docs/css/user-signup.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: "Montserrat", sans-serif;
 }
 
 @font-face {
@@ -28,6 +29,15 @@
     padding-top: 125px;
 }
 
+#content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, .4);
+    overflow: hidden;
+}
 
 
 /* --- BOXES --- */
