--- a/docs/css/alterar-veiculo.css
+++ b/docs/css/alterar-veiculo.css
@@ -41,7 +41,7 @@
 
 .info-cadastro input {
     width: 95%; 
-    height: 50px;
+    height: 35px;
     border-radius: 5px;
     border: 1px solid #bbb;
     background-color: #f5f5f5;
@@ -60,21 +60,21 @@
     padding-left: 15px;
 }   
 
-#title-form {
+#title-form{
     margin-top: 20px;
     text-align: center;
     font-size: 25px;
     font-weight: bold;
-    padding-bottom: 20px;
 }
 
 .botao{
 margin-top: 20px;
 }
+
 #button-cadastrar {
     display: flex;
     width: 322px;
-    height: 50px;
+    height: 35px;
     font-size: 20px;
     border-radius: 5px;
     justify-content: center;
@@ -82,6 +82,12 @@ margin-top: 20px;
     padding-top: 10px;
     background-color: #e4321e;  
     color: #FFF; 
+}
+
+.sub-title-form {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 @media only screen and (max-width: 768px) { 
